--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "smoke": "node scripts/smoke-test.js"
   },
   "dependencies": {
     "axios": "1.7.7",
     "cheerio": "1.0.0",
     "cors": "2.8.5",
     "express": "4.19.2",
-    "socks-proxy-agent": "8.0.2"
+    "socks-proxy-agent": "8.0.2",
+    "helmet": "7.0.0",
+    "compression": "1.7.4",
+    "dotenv": "16.4.5"
   }
 }
